--- a/src/style/mixin.styl
+++ b/src/style/mixin.styl
@@ -62,7 +62,7 @@ sc($size, $color)
 
 
 //flex 布局和 子元素 对其方式
-fj($type = space-between)
+fj($type = center)
   display flex
   justify-content $type
 
