--- a/src/style/mixin.styl
+++ b/src/style/mixin.styl
@@ -16,11 +16,17 @@ borderRadius($radius)
   border-radius $radius
 
 //定位全屏
-allcover
+allcover()
   position absolute
   top 0
   right 0
 
+
+//定位左上角
+tl()
+  position absolute
+  top 0
+  left 0
 
 //定位上下左右居中
 center()
